# PonderGo

./: .gitignore  Cargo.toml  package-lock.json  package.json  roadmap.md  yzy-toolbar-implementation.md
app/: index.html  package-lock.json  package.json
app/src/: App.svelte  HawkeyeWindow.svelte  app.css  main.ts
app/src/lib/api/: client.ts  http-client.ts  index.ts  tauri-client.ts  types.ts
app/src/lib/board/: BoardCanvas.svelte  board-renderer.ts  coordinate-system.ts  index.ts  overlay-renderer.ts
app/src/lib/charts/: WinrateGraph.svelte  index.ts
app/src/lib/components/: Button.svelte  Dialog.svelte  EmptyState.svelte
app/src/lib/layout/: AutoResizeBoard.svelte  PinnablePanel.svelte  ResizableSplitter.svelte
app/src/lib/panels/: EnginePanel.svelte  index.ts
app/src/lib/settings/: EngineProfilePicker.svelte  SettingsDialog.svelte
app/src/lib/state/: config-state.ts  engine-actions.ts  engine-profiles.ts  game-actions.ts  runtime.ts  sound-effects.ts
app/src/lib/toolbar/: StatusBar.svelte  TopToolbar.svelte
app/src/lib/tree/: MoveList.svelte  index.ts
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs
crates/core/src/engine/: analysis.rs  engine_manager.rs  gtp.rs  mod.rs  move_data.rs
crates/core/src/go/: board.rs  board_history.rs  mod.rs  (+3 more)
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/src/: lib.rs
crates/desktop/src/commands/: board_cmd.rs  config_cmd.rs  engine_cmd.rs  mod.rs  sgf_cmd.rs  tree_cmd.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
