[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/desktop",
]
# server crate 预留，暂不加入构建
# "crates/server"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
repository = "https://github.com/HandleCoding/PonderGo"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
