[package]
name = "ponder-desktop"
description = "PonderGo desktop app (Tauri)"
version.workspace = true
edition.workspace = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
ponder-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
dirs = "6"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
